Import of FERRANCE/PDF-Template-0.02 from CPAN.
gitpan-cpan-distribution: PDF-Template
gitpan-cpan-version:      0.02
gitpan-cpan-path:         FERRANCE/PDF-Template-0.02.tar.gz
gitpan-cpan-author:       FERRANCE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,4 +2,7 @@ Revision history for Perl extension PDF::Template.
 
 0.01  Wed Feb 13 15:31:36 2002
    - original version; created by h2xs 1.19
-
+0.02  Mon Mar 3 16:44:00 2002
+   - Swapped LMARGIN and RMARGIN (they were backwards)
+   - Adding the "always" concept, clarifying when things are rendered
+   - More test cases, which double as examples
