Import of FERRANCE/PDF-Template-0.03 from CPAN.
gitpan-cpan-distribution: PDF-Template
gitpan-cpan-version:      0.03
gitpan-cpan-path:         FERRANCE/PDF-Template-0.03.tar.gz
gitpan-cpan-author:       FERRANCE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,3 +6,9 @@ Revision history for Perl extension PDF::Template.
    - Swapped LMARGIN and RMARGIN (they were backwards)
    - Adding the "always" concept, clarifying when things are rendered
    - More test cases, which double as examples
+0.03
+   - Rolf Beutner - Text color
+   - Robert Graff - US Paper sizes
+   - Christian Frantsen - Add width parameter for <line>
+   - Cleaned up test 2 (t2.xml)
+   - New test cases
