Import of FERRANCE/PDF-Template-0.04 from CPAN.
gitpan-cpan-distribution: PDF-Template
gitpan-cpan-version:      0.04
gitpan-cpan-path:         FERRANCE/PDF-Template-0.04.tar.gz
gitpan-cpan-author:       FERRANCE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -12,3 +12,6 @@ Revision history for Perl extension PDF::Template.
    - Christian Frantsen - Add width parameter for <line>
    - Cleaned up test 2 (t2.xml)
    - New test cases
+0.04
+   - Fixed bug in get_buffer().  Thanks Marco!
+   - makefile.pl now checks for pdflif_pl.pm installed
