Import of RKINYON/PDF-Template-0.16 from CPAN.
gitpan-cpan-distribution: PDF-Template
gitpan-cpan-version:      0.16
gitpan-cpan-path:         RKINYON/PDF-Template-0.16.tar.gz
gitpan-cpan-author:       RKINYON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module PDF::Template
 
+0.16 Wed Mar 17 12:00:00 2003
+    - Parameter names are now case-insensitive
+
 0.15 Tue Mar 16 12:00:00 2003
     - Fixed bug w/using the same image in more than one <image> tag
 
