Import of RKINYON/PDF-Template-0.17 from CPAN.
gitpan-cpan-distribution: PDF-Template
gitpan-cpan-version:      0.17
gitpan-cpan-path:         RKINYON/PDF-Template-0.17.tar.gz
gitpan-cpan-author:       RKINYON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module PDF::Template
 
+0.17 Wed Mar 17 12:00:00 2003
+    - Fixed bug introduced in 0.16 (loop parameters weren't case-insensitive)
+
 0.16 Wed Mar 17 12:00:00 2003
     - Parameter names are now case-insensitive
 
